--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,7 @@
             <button type="button" id="Refresh">Refresh</button>
             <p><img src="about:blank" alt="campic" id="CamPic" width="100%" /></p>
         </div>
+        <div id="AvailableImages"></div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="/javascripts/campic.js"></script>
