Notify about new image with websocket

--- a/views/index.html
+++ b/views/index.html
@@ -40,6 +40,7 @@
         window.campic.vars = <%= JSON.stringify(exports) %>;
     </script>
     <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/javascripts/campic.js"></script>
 </body>
 </html>
