Add keyboard navigation

--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,9 @@
         #CamPicContainer {
             overflow: hidden;
         }
+        #AvailableImages .active {
+            color: red;
+        }
     </style>
 </head>
 <body>
